change localhost links

--- a/views/poll_created.ejs
+++ b/views/poll_created.ejs
@@ -14,8 +14,8 @@
         <div id="pollContainer" style="padding:45px; background-color:#e5eef0">
             <h4>Your poll has been created successfully!</h4>
             <p>You can send this link to share your poll: </p>
-            <p>http://localhost:3000/poll/<%= pollId %></p>
-            <p>You can also click the following link to see your poll: <a href="http://localhost:3000/poll/<%= pollId %>">Link</a></p>
+            <p>https://lit-anchorage-62341.herokuapp.com/poll/<%= pollId %></p>
+            <p>You can also click the following link to see your poll: <a href="https://lit-anchorage-62341.herokuapp.com/poll/<%= pollId %>">Link</a></p>
         </div>
          <div id="about" style="padding:65px">
             <div class="row">
