--- a/views/vote_success.ejs
+++ b/views/vote_success.ejs
@@ -15,7 +15,7 @@
             <div style="margin-bottom:40px">
                 <p>Your vote has been made successfully!</p>
                 <p>Please use the following link to share results: </p>
-                <p>http://localhost:3000/results/<%= poll.id %></p>
+                <p>https://lit-anchorage-62341.herokuapp.com/results/<%= poll.id %></p>
             </div>
             <h4><%= poll.question %></h4>
             <h5 style="margin-bottom:20px">- <%= poll.firstName %> <%= poll.lastName %></h5>
