--- a/views/poll_results.ejs
+++ b/views/poll_results.ejs
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="header" style="padding:30px">
-            <h1>PolliFy</h1>
+            <a class="logo" style="text-decoration:none" href="https://lit-anchorage-62341.herokuapp.com/"><h1>PolliFy</h1></a>
             <h4>Free poll generation app powered by Fyminds</h4>
         </div>
         <div id="pollContainer" style="padding:30px; background-color:#e5eef0">
