--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,10 +7,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div id="header" style="padding:30px">
-             <h1><a class="logo" style="text-decoration:none" href="https://lit-anchorage-62341.herokuapp.com/">PolliFy</a></h1>
-            <h4>Free poll generation app powered by Fyminds</h4>
-        </div>
+        <%- include('partials/header') %>
         <form action="/create_poll" style="padding:30px; background-color:#e5eef0" method="POST">
             <div class="form-group">
                 <label for="inputQuestion">Enter question: </label>
@@ -36,36 +33,9 @@
                 <button style="float:right; margin-top:10px" type="submit" class="btn btn-default">Create Poll</button>
             </div>
         </form>
-        <div id="about" style="padding:65px">
-            <div class="row">
-                <div class="col-md-8">
-                    <h4>Make your startup</h4>
-                    <h5 style="padding-bottom:10px">Dream a reality</h5>
-                    <p>Fyminds is an integrated service company that offers clients a range of services from marketing, operation, technology, strategy and advanced analytics. Our unique approach is solution driven and result delivery. We help our clients develop, implement and realize solutions.</p>
-                    <div class="text-center">
-                        <img width="584" height="298" src="http://www.fyminds.com/wp-content/uploads/2015/09/plant-image.png">
-                    </div>
-                </div>
-                <div class="col-md-4 text-center">
-                    <img style="margin-left: 10px; margin-top:20px" width="250" height="300" src="http://www.fyminds.com/wp-content/uploads/2017/02/fyminds_brochure.jpg">
-                    <div style="padding-top:20px">
-                        <a href="http://www.fyminds.com/wp-content/uploads/2017/02/fyminds_brochure.pdf">Click for more details</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="contact" style="padding:30px">
-            <h3>Contact</h3>
-            <hr/>
-            <h5>Address</h5>
-            <p>6700 Best Friend Rd.</p>
-            <p>Norcross, GA 30071</p>
-            <h5>Email</h5>
-            <p>info@fyminds.com</p>
-        </div>
-        <div id="footer" style="padding:30px; background-color:#e5eef0; text-align:center">
-            Copyright &copy; 2017. <a href="http://fyminds.com">Fyminds</a>.
-        </div>
+        <%- include('partials/about') %>
+        <%- include('partials/contact') %>
+        <%- include('partials/footer') %>
         <!-- Modal -->
         <div class="modal fade" id="myModal" role="dialog">
             <div class="modal-dialog modal-sm">
