--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -7,10 +7,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div id="header" style="padding:30px">
-            <h1><a class="logo" style="text-decoration:none" href="https://lit-anchorage-62341.herokuapp.com/">PolliFy</a></h1>
-            <h4>Free poll generation app powered by Fyminds</h4>
-        </div>
+        <%- include('partials/header') %>
         <div id="pollContainer" style="padding:30px; background-color:#e5eef0">
             <form action="/make_vote" method="POST" data-toggle="validator">
                 <h4><%= poll.question %></h4>
@@ -32,32 +29,8 @@
                 </div>
             </form>
         </div>
-        <div id="about" style="padding:65px">
-            <div class="row">
-                <div class="col-md-8">
-                    <h4>Make your startup</h4>
-                    <h5 style="padding-bottom:10px">Dream a reality</h5>
-                    <p>Fyminds is an integrated service company that offers clients a range of services from marketing, operation, technology, strategy and advanced analytics. Our unique approach is solution driven and result delivery. We help our clients develop, implement and realize solutions.</p>
-                    <div class="text-center">
-                        <img width="584" height="298" src="http://www.fyminds.com/wp-content/uploads/2015/09/plant-image.png">
-                    </div>
-                </div>
-                <div class="col-md-4 text-center">
-                    <img style="margin-left: 10px; margin-top:20px" width="250" height="300" src="http://www.fyminds.com/wp-content/uploads/2017/02/fyminds_brochure.jpg">
-                    <div style="padding-top:20px">
-                        <a href="http://www.fyminds.com/wp-content/uploads/2017/02/fyminds_brochure.pdf">Click for more details</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="footer" style="padding:30px">
-            <h3>Contact</h3>
-            <hr/>
-            <h5>Address</h5>
-            <p>6700 Best Friend Rd.</p>
-            <p>Norcross, GA 30071</p>
-            <h5>Email</h5>
-            <p>info@fyminds.com</p>
-        </div>
+        <%- include('partials/about') %>
+        <%- include('partials/contact') %>
+        <%- include('partials/footer') %>
     </body>
 </html>
