Add admin panel

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -9,36 +9,11 @@
     <body>
         <%- include('partials/header') %>
         <div id="pollContainer" style="padding:45px; background-color:#e5eef0">
-            <h4>Poll does not exist!</h4>
+            <h4>Page does not exist!</h4>
             <p>Please check the URL for typos.</p>
         </div>
-        <div id="about" style="padding:65px">
-            <div class="row">
-                <div class="col-md-8">
-                    <h4>Make your startup</h4>
-                    <h5 style="padding-bottom:10px">Dream a reality</h5>
-                    <p>Fyminds is an integrated service company that offers clients a range of services from marketing, operation, technology, strategy and advanced analytics. Our unique approach is solution driven and result delivery. We help our clients develop, implement and realize solutions.</p>
-                    <div class="text-center">
-                        <img width="584" height="298" src="http://www.fyminds.com/wp-content/uploads/2015/09/plant-image.png">
-                    </div>
-                </div>
-                <div class="col-md-4 text-center">
-                    <img style="margin-left: 10px; margin-top:20px" width="250" height="300" src="http://www.fyminds.com/wp-content/uploads/2017/02/fyminds_brochure.jpg">
-                    <div style="padding-top:20px">
-                        <a href="http://www.fyminds.com/wp-content/uploads/2017/02/fyminds_brochure.pdf">Click for more details</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="contact" style="padding:30px">
-            <h3>Contact</h3>
-            <hr/>
-            <h5>Address</h5>
-            <p>6700 Best Friend Rd.</p>
-            <p>Norcross, GA 30071</p>
-            <h5>Email</h5>
-            <p>info@fyminds.com</p>
-        </div>
+        <%- include('partials/about') %>
+        <%- include('partials/contact') %>
         <%- include('partials/footer') %>
     </body>
 </html>
