add viewport for mobile

--- a/views/partials/about.ejs
+++ b/views/partials/about.ejs
@@ -5,11 +5,11 @@
             <h5 style="padding-bottom:10px">Dream a reality</h5>
             <p>Fyminds is an integrated service company that offers clients a range of services from marketing, operation, technology, strategy and advanced analytics. Our unique approach is solution driven and result delivery. We help our clients develop, implement and realize solutions.</p>
             <div class="text-center">
-                <img width="584" height="298" src="http://www.fyminds.com/wp-content/uploads/2015/09/plant-image.png">
+                <img width="60%" height="auto" src="http://www.fyminds.com/wp-content/uploads/2015/09/plant-image.png">
             </div>
         </div>
         <div class="col-md-4 text-center">
-            <img style="margin-left: 10px; margin-top:20px" width="250" height="300" src="http://www.fyminds.com/wp-content/uploads/2017/02/fyminds_brochure.jpg">
+            <img style="margin-left: 10px; margin-top:20px" width="60%" height="auto" src="http://www.fyminds.com/wp-content/uploads/2017/02/fyminds_brochure.jpg">
             <div style="padding-top:20px">
                 <a href="http://www.fyminds.com/wp-content/uploads/2017/02/fyminds_brochure.pdf">Click for more details</a>
             </div>
