--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,11 +2,12 @@
     <head>
         <title>Pollify</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="./css/jquery.datetimepicker.min.css">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="./js/jquery.datetimepicker.full.min.js"></script>
     </head>
     <body>
         <%- include('partials/header') %>
@@ -33,6 +34,15 @@
                 </div>
                 <span class="btn btn-default" style="margin-top:10px" id="addAnswerBtn"><i class="fa fa-plus"></i> Add Answer</span>
                 <button style="float:right; margin-top:10px" type="submit" class="btn btn-default">Create Poll</button>
+                <div class="row" style="margin-top:20px">
+                    <div class="form-group col-md-3">
+                        <label class="form-check-label">
+                            <input id="doesExpire" class="form-check-input" type="checkbox" name="doesExpire" value="true">
+                            Enable Expiration
+                        </label>
+                        <input type="text" class="form-control" name="expirationDate" id="datetimepicker" required="true" disabled>
+                    </div>
+                </div>
             </div>
         </form>
         <%- include('partials/about') %>
@@ -41,24 +51,40 @@
         <!-- Modal -->
         <div class="modal fade" id="myModal" role="dialog">
             <div class="modal-dialog modal-sm">
-            <div class="modal-content">
-                <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Error</h4>
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Error</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Max number of questions reached.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
-                <div class="modal-body">
-                <p>Max number of questions reached.</p>
-                </div>
-                <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
             </div>
         </div>
         <!-- End Modal -->
     </body>
     <script>
         $(document).ready(function(){
+            $('#doesExpire').change(function(){
+                if($('#doesExpire').is(':checked')){
+                    $('#datetimepicker').prop('disabled', false);
+                }
+                else{
+                    $('#datetimepicker').prop('disabled', true);
+                }
+            });
+            $('#datetimepicker').datetimepicker(
+                {
+                    minDate:new Date(),
+                    format: 'm/d/Y g:i A',
+                    formatTime: 'g:i A',
+                    closeOnDateSelect:true
+                }
+            );
             var answerNumber = 2;
             $('#addAnswerBtn').click(function(){
                 if(answerNumber < 11){
