--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -18,13 +18,24 @@
                     <% for(var i = 0; i < poll.answers.length; i++){ %>
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input class="form-check-input" type="radio" name="voteAnswer" value="<%= poll.answers[i]._id %>" required>
-                                <%= poll.answers[i].answer %>
+                                <% if(currentDate && currentDate > poll.expirationDate){ %>
+                                    <input class="form-check-input" type="radio" name="voteAnswer" value="<%= poll.answers[i]._id %>" required disabled>
+                                    <%= poll.answers[i].answer %>
+                                <% } else { %>
+                                    <input class="form-check-input" type="radio" name="voteAnswer" value="<%= poll.answers[i]._id %>" required>
+                                    <%= poll.answers[i].answer %>
+                                <% } %>
                             </label>
                         </div>
                     <% } %>
                     <br/>
-                    <button type="submit" class="btn btn-default">Submit Vote</button>
+                    <% if(currentDate && currentDate > poll.expirationDate){ %>
+                        <button type="submit" class="btn btn-default" disabled>Submit Vote</button>
+                        <h5>This poll has expired on <%= moment(poll.expirationDate).format('MMMM DD, YYYY [at] h:mm a') %></h5>
+                        <h5>Please click the link below to see the results.</h5>
+                    <% } else { %>
+                        <button type="submit" class="btn btn-default">Submit Vote</button>
+                    <% } %>
                     <p style="margin-top:5px"><a href="/results/<%= poll.id %>">See results</a></p>
                 </div>
             </form>
