add placeholder for expiration date

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
                             <input id="doesExpire" class="form-check-input" type="checkbox" name="doesExpire" value="true">
                             Enable Expiration
                         </label>
-                        <input type="text" class="form-control" name="expirationDate" id="datetimepicker" required="true" disabled>
+                        <input type="text" class="form-control" name="expirationDate" id="datetimepicker" placeholder="Expiration Date" required="true" disabled>
                     </div>
                 </div>
             </div>
