--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -37,6 +37,8 @@
                         <button type="submit" class="btn btn-default">Submit Vote</button>
                     <% } %>
                     <p style="margin-top:5px"><a href="/results/<%= poll.id %>">See results</a></p>
+                    Current: <%= currentDate %>
+                    Expires: <%= expirationDate %>
                 </div>
             </form>
         </div>
