--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -39,6 +39,7 @@
                     <p style="margin-top:5px"><a href="/results/<%= poll.id %>">See results</a></p>
                     Current: <%= currentDate %>
                     Expires: <%= expirationDate %>
+                    Offset: <%= offset %>
                 </div>
             </form>
         </div>
