--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -46,5 +46,10 @@
         <%- include('partials/about') %>
         <%- include('partials/contact') %>
         <%- include('partials/footer') %>
+        <script>
+            $(function(){
+                console.log(new Date().getTimezoneOffset());
+            });
+        </script>
     </body>
 </html>
