--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -18,24 +18,14 @@
                     <% for(var i = 0; i < poll.answers.length; i++){ %>
                         <div class="form-check">
                             <label class="form-check-label">
-                                <% if(currentDate && currentDate > expirationDate){ %>
-                                    <input class="form-check-input" type="radio" name="voteAnswer" value="<%= poll.answers[i]._id %>" required disabled>
+                                <input id="voteAnswer" class="form-check-input" type="radio" name="voteAnswer" value="<%= poll.answers[i]._id %>" required>
                                     <%= poll.answers[i].answer %>
-                                <% } else { %>
-                                    <input class="form-check-input" type="radio" name="voteAnswer" value="<%= poll.answers[i]._id %>" required>
-                                    <%= poll.answers[i].answer %>
-                                <% } %>
                             </label>
                         </div>
                     <% } %>
                     <br/>
-                    <% if(currentDate && currentDate > poll.expirationDate){ %>
-                        <button type="submit" class="btn btn-default" disabled>Submit Vote</button>
-                        <h5>This poll has expired on <%= moment(poll.expirationDate).format('MMMM DD, YYYY [at] h:mm a') %></h5>
-                        <h5>Please click the link below to see the results.</h5>
-                    <% } else { %>
-                        <button type="submit" class="btn btn-default">Submit Vote</button>
-                    <% } %>
+                    <button id="submitVote" type="submit" class="btn btn-default">Submit Vote</button>
+ 
                     <p style="margin-top:5px"><a href="/results/<%= poll.id %>">See results</a></p>
                     Current: <%= currentDate %>
                     Expires: <%= expirationDate %>
@@ -52,10 +42,16 @@
                 var expirationDate= <%=expirationDate %>;
                 var currentDate= <%=currentDate %>;
                 var newExpirationDate = expirationDate + ((offset/60) * 60 * 60 * 1000);
+                var moment = <%= moment %>;
                 console.log(offset);
                 console.log('expiration: ' + expirationDate + ' ' + new Date((expirationDate/1000)*1000));
                 console.log('current: ' + currentDate + ' ' + new Date((currentDate/1000)*1000));
                 console.log('new expiration' + newExpirationDate + ' ' + new Date((newExpirationDate/1000)*1000));
+                if(currentDate > newExpirationDate){
+                    $('#submitVote').prop('disabled', true);
+                    $('#voteAnswer').prop('disabled', true);
+                    $('<h5>This poll has expired on ' + moment(expirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5><h5>Please click the link below to see the results.</h5>').insertAfter('#submitVote')
+                }                        
             });
         </script>
     </body>
