timezone bug fix

--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/momentjs/2.18.1/moment.min.js"></script>
     </head>
     <body>
         <%- include('partials/header') %>
@@ -27,9 +28,6 @@
                     <button id="submitVote" type="submit" class="btn btn-default">Submit Vote</button>
  
                     <p style="margin-top:5px"><a href="/results/<%= poll.id %>">See results</a></p>
-                    Current: <%= currentDate %>
-                    Expires: <%= expirationDate %>
-                    Offset: <%= offset %>
                 </div>
             </form>
         </div>
@@ -42,7 +40,7 @@
                 var expirationDate= <%=expirationDate %>;
                 var currentDate= <%=currentDate %>;
                 var newExpirationDate = expirationDate + ((offset/60) * 60 * 60 * 1000);
-                var moment = <%= moment %>;
+                var outputExpirationDate = new Date(newExpirationDate);
                 console.log(offset);
                 console.log('expiration: ' + expirationDate + ' ' + new Date((expirationDate/1000)*1000));
                 console.log('current: ' + currentDate + ' ' + new Date((currentDate/1000)*1000));
@@ -50,7 +48,7 @@
                 if(currentDate > newExpirationDate){
                     $('#submitVote').prop('disabled', true);
                     $('.voteAnswer').prop('disabled', true);
-                    // $('<h5>This poll has expired on ' + moment(expirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5><h5>Please click the link below to see the results.</h5>').insertAfter('#submitVote')
+                    $('<h5>This poll has expired on ' + moment(newExpirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5><h5>Please click the link below to see the results.</h5>').insertAfter('#submitVote')
                 }                        
             });
         </script>
