--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -45,6 +45,7 @@
                     $('.voteAnswer').prop('disabled', true);
                     $('<h5>This poll has expired on ' + moment(newExpirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5><h5>Please click the link below to see the results.</h5>').insertAfter('#submitVote')
                     $('<h5>Your current time is ' + moment(currentDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5>').insertAfter('#submitVote')
+                    $('<h5>Your offset is ' + offset + '</h5>').insertAfter('#submitVote')
                 }                        
             });
         </script>
