--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -40,17 +40,16 @@
                 var expirationDate= <%=expirationDate %>;
                 var currentDate= <%=currentDate %>;
                 var newExpirationDate = expirationDate + ((offset/60) * 60 * 60 * 1000);
-                var newCurrentDate = currentDate + (offset/60)
                 if(currentDate > newExpirationDate){
                     $('#submitVote').prop('disabled', true);
                     $('.voteAnswer').prop('disabled', true);
-                    // $('<h5>This poll has expired on ' + moment(newExpirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5><h5>Please click the link below to see the results.</h5>').insertAfter('#submitVote')
-                    // $('<h5>Your current time is ' + moment(currentDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5>').insertAfter('#submitVote')
-                    // $('<h5>Your offset is ' + offset + '</h5>').insertAfter('#submitVote')
+                    $('<h5>This poll has expired on ' + moment(newExpirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5><h5>Please click the link below to see the results.</h5>').insertAfter('#submitVote');
+                    // $('<h5>Your current time is ' + moment(currentDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5>').insertAfter('#submitVote');
+                    // $('<h5>Your offset is ' + offset + '</h5>').insertAfter('#submitVote');
                 }
-                $('<h5>This poll has expired on ' + moment(newExpirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5><h5>Please click the link below to see the results.</h5>').insertAfter('#submitVote')
-                $('<h5>Your current time is ' + moment(currentDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5>').insertAfter('#submitVote')
-                $('<h5>Your offset is ' + offset + '</h5>').insertAfter('#submitVote')
+                else{
+                    $('<h5>This poll will expire on ' + moment(newExpirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5>').insertAfter('#submitVote');
+                }
             });
         </script>
     </body>
