--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <div id="header" style="padding:30px">
-    <div style="float:right"><a href="/zh">Chinese</a></div>
+    <div style="float:right"><a href="/zh">中文</a></div>
     <h1><a class="logo" style="text-decoration:none" href="https://lit-anchorage-62341.herokuapp.com/">PolliFy</a></h1>
     <h4>Free poll generation app powered by Fyminds</h4>
 </div>
