--- a/views/zh/home.ejs
+++ b/views/zh/home.ejs
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../../css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="./css/jquery.datetimepicker.min.css">
+        <link rel="stylesheet" href="../../css/jquery.datetimepicker.min.css">
         <script src="../../js/jquery-3.2.1.min.js"></script>
         <script src="../../js/bootstrap.min.js"></script>
         <script src="../../js/jquery.datetimepicker.full.min.js"></script>
