--- a/views/zh/adminpanel.ejs
+++ b/views/zh/adminpanel.ejs
@@ -2,7 +2,7 @@
     <head>
         <title>Pollify</title>
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../../css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="../../js/jquery-3.2.1.min.js"></script>
         <script src="../../js/bootstrap.min.js"></script>
