--- a/views/zh/home.ejs
+++ b/views/zh/home.ejs
@@ -40,7 +40,7 @@
                             <input id="doesExpire" class="form-check-input" type="checkbox" name="doesExpire" value="true">
                             截止时间
                         </label>
-                        <input type="text" class="form-control" autocomplete="off" name="expirationDate" id="datetimepicker" placeholder="Expiration Date" required="true" disabled>
+                        <input type="text" class="form-control" autocomplete="off" name="expirationDate" id="datetimepicker" placeholder="截止时间" required="true" disabled>
                     </div>
                 </div>
             </div>
