--- a/views/zh/poll.ejs
+++ b/views/zh/poll.ejs
@@ -25,9 +25,9 @@
                         </div>
                     <% } %>
                     <br/>
-                    <button id="submitVote" type="submit" class="btn btn-default">Submit Vote</button>
+                    <button id="submitVote" type="submit" class="btn btn-default">提交投票</button>
  
-                    <p style="margin-top:5px"><a href="zh/results/<%= poll.id %>">See results</a></p>
+                    <p style="margin-top:5px"><a href="../../zh/results/<%= poll.id %>">查看结果</a></p>
                 </div>
             </form>
         </div>
@@ -40,16 +40,18 @@
                 var expirationDate= <%=expirationDate %>;
                 var currentDate= <%=currentDate %>;
                 var newExpirationDate = expirationDate + ((offset/60) * 60 * 60 * 1000);
-                if(currentDate > newExpirationDate){
+
+                //Change all expirationDate below to newExpirationDate if need offsetting
+                if(currentDate > expirationDate){
                     $('#submitVote').prop('disabled', true);
                     $('.voteAnswer').prop('disabled', true);
-                    $('<h5>This poll has expired on ' + moment(newExpirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5><h5>Please click the link below to see the results.</h5>').insertAfter('#submitVote');
+                    $('<h5>此投票已截止: ' + moment(expirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5><h5>点击查看问卷结果.</h5>').insertAfter('#submitVote');
                     // $('<h5>Your current time is ' + moment(currentDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5>').insertAfter('#submitVote');
                     // $('<h5>Your offset is ' + offset + '</h5>').insertAfter('#submitVote');
                 }
                 else{
-                    if(newExpirationDate){
-                      $('<h5>This poll will expire on ' + moment(newExpirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5>').insertAfter('#submitVote');
+                    if(expirationDate){
+                      $('<h5>此次投票截止时间: ' + moment(expirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5>').insertAfter('#submitVote');
                     }
                 }
             });
