--- a/views/zh/poll.ejs
+++ b/views/zh/poll.ejs
@@ -37,21 +37,19 @@
         <script>
             $(function(){
                 var offset = new Date().getTimezoneOffset();
-                var expirationDate= <%=expirationDate %>;
-                var currentDate= <%=currentDate %>;
+                var expirationDate= <%= expirationDate %>;
+                var currentDate= <%= currentDate %>;
                 var newExpirationDate = expirationDate + ((offset/60) * 60 * 60 * 1000);
-
-                //Change all expirationDate below to newExpirationDate if need offsetting
-                if(currentDate > expirationDate){
+                if(currentDate > newExpirationDate){
                     $('#submitVote').prop('disabled', true);
                     $('.voteAnswer').prop('disabled', true);
-                    $('<h5>此投票已截止: ' + moment(expirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5><h5>点击查看问卷结果.</h5>').insertAfter('#submitVote');
+                    $('<h5>此投票已截止: ' + moment(newExpirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5><h5>点击查看问卷结果.</h5>').insertAfter('#submitVote');
                     // $('<h5>Your current time is ' + moment(currentDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5>').insertAfter('#submitVote');
                     // $('<h5>Your offset is ' + offset + '</h5>').insertAfter('#submitVote');
                 }
                 else{
-                    if(expirationDate){
-                      $('<h5>此次投票截止时间: ' + moment(expirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5>').insertAfter('#submitVote');
+                    if(newExpirationDate){
+                      $('<h5>此次投票截止时间: ' + moment(newExpirationDate).format('MMMM DD, YYYY [at] h:mm a') + '</h5>').insertAfter('#submitVote');
                     }
                 }
             });
