make name optional

--- a/views/zh/home.ejs
+++ b/views/zh/home.ejs
@@ -20,10 +20,10 @@
                 <label for="inputName">Enter name: </label>
                 <div class="row">
                     <div class="col-md-6">
-                        <input type="text" maxlength="20" style="margin-bottom:5px" class="form-control" name="firstName" id="inputFirstName" placeholder="名字" required="true">
+                        <input type="text" maxlength="20" style="margin-bottom:5px" class="form-control" name="firstName" id="inputFirstName" placeholder="名字">
                     </div>
                     <div class="col-md-6">
-                        <input type="text" maxlength="20" class="form-control" name="lastName" id="inputLastName" placeholder="姓" required="true">
+                        <input type="text" maxlength="20" class="form-control" name="lastName" id="inputLastName" placeholder="姓">
                     </div>
                 </div>
             </div>
