--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,10 +20,10 @@
                 <label for="inputName">Enter name: </label>
                 <div class="row">
                     <div class="col-md-6">
-                        <input type="text" maxlength="20" style="margin-bottom:5px" class="form-control" name="firstName" id="inputFirstName" placeholder="First Name" required="true">
+                        <input type="text" maxlength="20" style="margin-bottom:5px" class="form-control" name="firstName" id="inputFirstName" placeholder="First Name">
                     </div>
                     <div class="col-md-6">
-                        <input type="text" maxlength="20" class="form-control" name="lastName" id="inputLastName" placeholder="Last Name" required="true">
+                        <input type="text" maxlength="20" class="form-control" name="lastName" id="inputLastName" placeholder="Last Name">
                     </div>
                 </div>
             </div>
