--- a/views/vote_success.ejs
+++ b/views/vote_success.ejs
@@ -18,7 +18,9 @@
                 <p>You can also click the following link to see your poll: <a href="https://lit-anchorage-62341.herokuapp.com/results/<%= poll.id %>">Link</a></p>
             </div>
             <h4><%= poll.question %></h4>
-            <h5 style="margin-bottom:20px">- <%= poll.firstName %> <%= poll.lastName %></h5>
+            <% if(poll.firstName || poll.lastName) { %>
+                    <h5 style="margin-bottom:20px">- <%= poll.firstName %> <%= poll.lastName %></h5>
+                <% } %>
             <% for(var i = 0; i < poll.answers.length; i++){ %>
                 <li><%= poll.answers[i].answer %> - Votes: <%= poll.answers[i].votes %></li>
             <% } %>
