--- a/views/zh/poll_results.ejs
+++ b/views/zh/poll_results.ejs
@@ -11,7 +11,9 @@
         <%- include('partials/header') %>
         <div id="pollContainer" style="padding:30px; background-color:#e5eef0">
             <h4><%= poll.question %></h4>
-            <h5 style="margin-bottom:20px">- <%= poll.firstName %> <%= poll.lastName %></h5>
+            <% if(poll.firstName || poll.lastName) { %>
+                    <h5 style="margin-bottom:20px">- <%= poll.firstName %> <%= poll.lastName %></h5>
+                <% } %>
             <% for(var i = 0; i < poll.answers.length; i++){ %>
                 <li><%= poll.answers[i].answer %> - 投票: <%= poll.answers[i].votes %></li>
             <% } %>
