--- a/views/zh/home.ejs
+++ b/views/zh/home.ejs
@@ -17,7 +17,7 @@
                 <input type="text" maxlength="50" class="form-control" name="question" id="inputQuestion" placeholder="问题" required="true">
             </div>
             <div class="form-group">
-                <label for="inputName">Enter name: </label>
+                <label for="inputName">输入名字: </label>
                 <div class="row">
                     <div class="col-md-6">
                         <input type="text" maxlength="20" style="margin-bottom:5px" class="form-control" name="firstName" id="inputFirstName" placeholder="名字">
