--- a/views/zh/home.ejs
+++ b/views/zh/home.ejs
@@ -33,7 +33,6 @@
                     <input type="text" maxlength="20" class="form-control" name="answers" id="inputAnswer1" placeholder="选择 1" required="true">
                 </div>
                 <span class="btn btn-default" style="margin-top:10px" id="addAnswerBtn"><i class="fa fa-plus"></i> 加选择</span>
-                <button style="float:right; margin-top:10px" type="submit" class="btn btn-default">创建投票</button>
                 <div class="row" style="margin-top:20px">
                     <div class="form-group col-md-3">
                         <label class="form-check-label">
@@ -43,6 +42,7 @@
                         <input type="text" class="form-control" autocomplete="off" name="expirationDate" id="datetimepicker" placeholder="截止时间" required="true" disabled>
                     </div>
                 </div>
+                <button style="margin-top:10px" type="submit" class="btn btn-default">创建投票</button>
             </div>
         </form>
         <%- include('partials/about') %>
